
lashincludedir = $(includedir)/lash-1.0/lash

lashinclude_HEADERS = \
	lash.h \
	types.h \
	xmalloc.h \
	config.h \
	event.h \
	list.h \
	file.h \
	client_interface.h \
	protocol.h \
	loader.h \
	exec_params.h

noinst_HEADERS = \
	client.h \
	comm_buffer.h \
	debug.h \
	internal.h \
	socket.h \
	comm_event.h \
	config.h \
	internal.h \
	args.h \
	internal_headers.h \
	server_client.h \
	connect_params.h



