
lashincludedir = $(includedir)/lash-1.0/lash

lashinclude_HEADERS = \
	types.h \
	lash.h \
	config.h \
	event.h \
	client_interface.h \
	protocol.h


noinst_HEADERS = \
	types.h \
	xmalloc.h \
	list.h \
	file.h \
	client.h \
	loader.h \
	exec_params.h \
	comm_buffer.h \
	debug.h \
	internal.h \
	socket.h \
	comm_event.h \
	config.h \
	args.h \
	internal_headers.h \
	server_client.h \
	connect_params.h



