SUBDIRS = lv2core.lv2

AC_PREREQ(2.59)

AC_INIT([lv2core],[1],[dave@drobilla.net])

AC_CONFIG_AUX_DIR([config])

AC_CONFIG_SRCDIR([lv2.h])
AM_INIT_AUTOMAKE

LV2_VERSION="1"
AC_SUBST(LV2_VERSION)

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([lv2core.pc])
AC_CONFIG_FILES([lv2core.lv2/Makefile])

AC_OUTPUT
